[tool.poetry]
name = "rmqaio"
version = "0.19.0"
description = "Async RabbitMQ library with spec-based API, topology restore, and automatic reconnection"
authors = ["Roman Koshel <roma.koshel@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["rabbitmq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
packages = [{include = "rmqaio"}]

[tool.poetry.dependencies]
python = "^3.10"
aiormq = ">=6.7.6"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"

[tool.poetry.group.test.dependencies]
docker = "*"
httpx = "*"
invoke = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[tool.poetry.group.docs.dependencies]
black = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = {extras = ["python"], version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
indent = 4
lines_after_imports = 2
lines_between_types = 1
src_paths = ["."]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
disable_error_code = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services like Docker",
]
